# monty

./: 00.m  CMakeLists.txt  monty  monty.c  monty.h  monty_dep1(linked_list_func).c  monty_dep1_list.c  monty_dep2(linked_list_func).c  monty_dep2_list.c  monty_dep3(std_fun).c  monty_dep3_list.c  monty_dep4(std_fun).c  monty_dep4_std_fun.c  monty_dep_list1.c  monty_dep_list2.c  monty_dep_list3.c  monty_dep_std_fun1.c  monty_dep_std_fun3.c  monty_main_dun4.c  monty_main_fun.c  monty_main_fun3.c  mounty_main_fun.c  mounty_main_fun2.c  mounty_main_fun3.c
